# crvusdsim

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
crvusdsim/: __init__.py  __main__.py  version.py
crvusdsim/metrics/: __init__.py  base.py  metrics.py  metrics_N.py  metrics_controller.py  metrics_pool.py  metrics_rate.py
crvusdsim/network/: subgraph.py
crvusdsim/pipelines/: __init__.py
crvusdsim/plot/: bands_arb_profits_plot.py  bands_loss_plot.py
crvusdsim/pool/: __init__.py  snapshot.py
crvusdsim/pool_data/: __init__.py  cache.py  queries.py
crvusdsim/sim/: __init__.py
crvusdsim/templates/: BandsStrategy.py  PegcoinsPricesStrategy.py  Strategy.py  Trader.py  __init__.py
crvusdsim/utils/: __init__.py
docs/: advanced.rst  api.rst  conf.py  contributing.rst  index.rst  install.rst  quickstart.rst  requirements.in  requirements.txt
docs/_templates/: sidebarintro.html  sidebarlogo.html
notebooks/: autosim_demo.ipynb  llamma_pool_demo.ipynb  rate_compare.ipynb  rate_simulation.ipynb
scripts/: download_prices_data.py
test/: conftest.py  test_pool.py
test/amm/: conftest.py  test_amount_for_price.py  test_deposit_withdraw.py  test_exchange.py  test_exchange_dy.py  test_price_oracles.py  test_st_exchange.py  test_stable_swap.py
test/calc/: test_calc_func.py
test/crvusd/: test_controller_factory.py
test/lendborrow/: test_calculate_n1.py  test_controller_factory.py  test_create_repay.py  test_health_calculator_create.py  test_liquidate.py  test_max_borrowable.py
test/oracle/: test_crypto_with_stable_price.py
test/pegkeeper/: test_aggregator.py  test_pegkeepers.py
test/pool/: conftest.py  test_amount_for_price.py  test_deposit_withdraw.py  test_exchange.py  test_exchange_dy.py  test_price_oracles.py  test_stable_swap.py
(+66 files in other folders)
