[tool.poetry]
name = "crvusdsim"
version = "0.1.0"
description = "crvUSDsim is a tool simulating crvUSD pools with optimal arbitrageurs trading against them to check parameters for onboarding new collateral. Its primary use is to determine optimal A (a measure of the concentration of liquidity), fee parameters, loan_discount given historical price and volume feeds, liquidation_discount, policy_rate."
authors = ["0xreviews.xyz"]
license = "MIT"
readme = "README.md"
packages = [{ include = "crvusdsim" }]

[tool.poetry.dependencies]
python = "^3.10"
curvesim = { git = "https://github.com/curveresearch/curvesim.git" }
pytest = "^7.4.3"
hypothesis = "^6.90.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
